Fix alert going behind header in divi

--- a/assets/css/pages-frontend.scss
+++ b/assets/css/pages-frontend.scss
@@ -131,3 +131,9 @@
 		}
 	}
 }
+
+body.theme-Divi {
+	.sensei-message.alert {
+		margin-top: 80px;
+	}
+}
